# pvr.vdr.vnsi

./: CMakeLists.txt  README.md
lib/kodi-addon-dev-kit/include/kodi/: AddonLib.h  xbmc_pvr_types.h
lib/kodi-addon-dev-kit/include/kodi/addon.api2/: AddonLib.h  AddonLib.hpp  Codec.hpp  General.hpp  Network.hpp  SoundPlay.hpp  VFSUtils.hpp  definitions.h  dlfcn-win32.cpp
lib/kodi-addon-dev-kit/include/kodi/addon.api2/internal/: AddonLib_internal.h  libKODI_addon_AudioHead.hpp  libKODI_addon_CodecHead.hpp  libKODI_addon_DirectoryHead.hpp  libKODI_addon_FileHead.hpp  libKODI_addon_GeneralHead.hpp  libKODI_addon_Internal.hpp  libKODI_addon_NetworkHead.hpp  libKODI_addon_VFSUtilsHead.hpp
lib/kodi-addon-dev-kit/include/kodi/audioengine.api2/: AEStream.h  AudioEngineLib.h  definitions.h
lib/kodi-addon-dev-kit/include/kodi/audioengine.api2/internal/: libKODI_audioengine_AEStreamHead.h
lib/kodi-addon-dev-kit/include/kodi/gui.api2/: GUIControlButton.h  GUIControlEdit.h  GUIControlFadeLabel.h  GUIControlImage.h  GUIControlLabel.h  GUIControlProgress.h  GUIControlRadioButton.h  GUIControlRendering.h  GUIControlSettingsSlider.h  GUIControlSlider.h  GUIControlSpin.h  GUIControlTextBox.h  GUIDialogExtendedProgress.h  GUIDialogFileBrowser.h  GUIDialogKeyboard.h  GUIDialogNumeric.h  GUIDialogOK.h  GUIDialogProgress.h  GUIDialogSelect.h  GUIDialogTextViewer.h  GUIDialogYesNo.h  GUILib.h  GUIListItem.h  GUIWindow.h  definitions.h
lib/kodi-addon-dev-kit/include/kodi/gui.api2/internal/: libKODI_guilib_ControlSpinTail.h  libKODI_guilib_ListItemHead.h  libKODI_guilib_ListItemTail.h  libKODI_guilib_WindowHead.h  libKODI_guilib_WindowTail.h  libKODI_guilib_internal.h
lib/kodi-addon-dev-kit/include/kodi/internal/: AddonLib_internal.h
lib/kodi-addon-dev-kit/include/kodi/player.api2/: AddonPlayer.h  InfoTagMusic.h  InfoTagVideo.h  PlayList.h  PlayerLib.h  definitions.h
lib/kodi-addon-dev-kit/include/kodi/player.api2/internal/: libKODI_player_AddonPlayListHead.h  libKODI_player_AddonPlayerHead.h  libKODI_player_Internal.h
lib/kodi-addon-dev-kit/include/kodi/pvr.api2/: PVRLib.h  StreamUtils.h  definitions.h
lib/kodi-addon-dev-kit/include/kodi/pvr.api2/internal/: libKODI_pvr_Internal.h
lib/kodi-addon-dev-kit/kodi-addon-executable/: CMakeLists.txt
lib/kodi-addon-dev-kit/kodi-addon-executable/src/: AddonLibFunc_Base.cpp  InterProcess.cpp  InterProcess.h  RequestPacket.cpp  RequestPacket.h  ResponsePacket.cpp  ResponsePacket.h  SharedMemory.cpp  SharedMemory.h  SharedMemoryPosix.cpp  SharedMemoryWindows.cpp  main.cpp
lib/kodi-addon-dev-kit/kodi-addon-sharedlibrary/: CMakeLists.txt
lib/kodi-addon-dev-kit/kodi-addon-sharedlibrary/src/: FunctionTables.h  InterProcess.cpp  InterProcess.h
lib/kodi-addon-dev-kit/shared-code/: AddonLibFunc_Base_c.cpp  AddonLibFunc_Base_cpp.cpp  ErrorCodeNames.cpp  ErrorCodeNames.h  LibraryVersion.cpp  LibraryVersion.h
pvr.vdr.vnsi/: addon.xml  changelog.txt
src/: Addon.cpp  Addon.h  ClientInstance.cpp  ClientInstance.h  GUIWindowAdmin.cpp  GUIWindowAdmin.h  GUIWindowChannelScan.cpp  GUIWindowChannelScan.h  InputstreamDemux.cpp  InputstreamDemux.h  InputstreamRecording.h  RequestPacket.cpp  RequestPacket.h  ResponsePacket.cpp  ResponsePacket.h  Session.cpp  Session.h  Settings.cpp  Settings.h  VNSIAdmin.cpp  VNSIAdmin.h  VNSIChannelScan.cpp  VNSIChannelScan.h  VNSIChannels.cpp  VNSIChannels.h  VNSIData.cpp  VNSIData.h  VNSIDemux.cpp  VNSIDemux.h  VNSIRecording.cpp  VNSIRecording.h  VNSISession.cpp  VNSISession.h  addon.cpp  addon.h  client.cpp  client.h  requestpacket.cpp  requestpacket.h  responsepacket.cpp  (+3 more)
src/shaders/: Shader.cpp
